// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - colors - value[0] - TwitterColorSelector 1`] = `
Array [
  Array [
    Object {
      "color": "#000000",
      "colors": Array [
        "#123456",
        "#abc345",
      ],
      "id": "colors_input",
      "onChangeComplete": [Function],
      "triangle": "hide",
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - TwitterColorSelector 1`] = `
Array [
  Array [
    Object {
      "color": "#000000",
      "colors": undefined,
      "id": "default_input",
      "onChangeComplete": [Function],
      "triangle": "hide",
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - defaultColor - value[0] - TwitterColorSelector 1`] = `
Array [
  Array [
    Object {
      "color": "#FF0000",
      "colors": undefined,
      "id": "defaultColor_input",
      "onChangeComplete": [Function],
      "triangle": "hide",
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - label-disabled - value[0] - TwitterColorSelector 1`] = `
Array [
  Array [
    Object {
      "color": "#000000",
      "colors": undefined,
      "id": "label-disabled_input",
      "onChangeComplete": [Function],
      "triangle": "hide",
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - title - value[0] - TwitterColorSelector 1`] = `
Array [
  Array [
    Object {
      "color": "#000000",
      "colors": undefined,
      "id": "title_input",
      "onChangeComplete": [Function],
      "triangle": "hide",
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - triangle-top-left - value[0] - TwitterColorSelector 1`] = `
Array [
  Array [
    Object {
      "color": "#000000",
      "colors": undefined,
      "id": "triangle-top-left_input",
      "onChangeComplete": [Function],
      "triangle": "top-left",
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - triangle-top-right - value[0] - TwitterColorSelector 1`] = `
Array [
  Array [
    Object {
      "color": "#000000",
      "colors": undefined,
      "id": "triangle-top-right_input",
      "onChangeComplete": [Function],
      "triangle": "top-right",
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - width - value[0] - TwitterColorSelector 1`] = `
Array [
  Array [
    Object {
      "color": "#000000",
      "colors": undefined,
      "id": "width_input",
      "onChangeComplete": [Function],
      "triangle": "hide",
      "width": 200,
    },
    Object {},
  ],
]
`;
